[package]
name = "event_tickets"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "event_tickets"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []


[dependencies]
anchor-lang = { version = "0.31.1", features = [
    "init-if-needed",
    "interface-instructions",
] }
anchor-spl = { version = "0.31.1", features = ["metadata"] }
mpl-token-metadata = "5.0.1"
spl-token-metadata-interface = "*"
spl-type-length-value = "*"
spl-transfer-hook-interface = "*"
spl-tlv-account-resolution = "*"
spl-discriminator = "*"
