[package]
name = "event_tickets"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "event_tickets"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []


[dependencies]
anchor-lang = { version = "0.31.1", features = [
    "init-if-needed",
    "interface-instructions",
] }
anchor-spl = "0.31.1"
spl-token-metadata-interface = "0.7.0"
spl-type-length-value = "0.8.0"
spl-transfer-hook-interface = "0.10.0"
spl-tlv-account-resolution = "0.10.0"
spl-discriminator = "0.4.1"
